infraestructure/kubernets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-food-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fast-food-app
  template:
    metadata:
      labels:
        app: fast-food-app
    spec:
      containers:
      - name: fast-food-app
        image: your-docker-image
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
