infraestructure/kubernets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-food-service
spec:
  selector:
    app: fast-food-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
